fix line breaks on apply and contact forms

--- a/skin/frontend/default/company/css/styles.css
+++ b/skin/frontend/default/company/css/styles.css
@@ -808,7 +808,7 @@ body.cms-home div.view-more a.view{
 	vertical-align: middle;
 }
 #contact-info .info a.contact-btn{
-	background-color: #d35400;
+	background-color: #f9690e;
 	padding: 5px 20px;
 	color: #fff;
 	font-weight: bold;
